2001-11-21  Mark Mitchell  <mark@codesourcery.com>

	* README: Document --prefix.  Remove getting started
	documentation.
	* README.sources: Remove obsolete information.  Document
	environment variable format.
	* doc/manual/test-manual.xml: Document environment variables
	used by QMTest.
	* qm/qm.sh: Use QM_PYTHON to find the Python interpreter if
	it is set.
	* qm/test/base.py (get_extension_directories): Change
	QMTEST_CLASSPATH to QMTEST_CLASS_PATH.
	* qm/test/text_result_stream.py (TextResultStream.__init__):
	Display "TEST RESULTS" heading.
	(TextResultStream.WriteResult): Display the
	result of the test immediately.
	(TextResultStream.Summarize): Use _DisplayHeading.
	(TextResultStream._SummarizeResults): Use _DisplayResult.
	(TextResultStream._DisplayResult): New method.
	(TextResultStream._DisplayHeading): Likewise.
	
	* doc/manual/common-manual.xml: Remove user database section.
	* doc/manual/manual.xml: Remove QMTrack from title.
	
2001-11-21  Jeffrey Oldham <oldham@codesourcery.com>
	    Ricardo Anguiano <anguiano@codesourcery.com>

	* README.sources: Fix typo.
	* doc/manual/test-manual.xml: Likewise.

2001-11-19  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (get_class_arguments): Retrofit to Python 1.5.2.

	* Makefile.in (install): Quote directory names.
	* install.py (scripts): Use .bat extension on Windows.
	(install_package): Include .pyd files on Windows.
	* qm/Makefile.in (SCRIPTS): Generate batch files under Windows.
	* qm/platform.py: Treat unknown platforms as UNIX.
	(get_shell_for_command): New function.
	(get_shell_for_script): Likewise.
	* qm/platform_unix.py (get_shell_for_command): Remove.
	(get_shell_for_script): Likewise.
	* qm/platform_win32.py (default_shell): New variable.
	* qm/test/suite.py (Suite.__init__): Remove unnecessary assertion.
	* qm/test/classes/command.py (ReadThread): New class.
	(WriteThread): Likewise.
	(ExecTestBase.exit_code): Revise documentation.
	(ExecTestBase.Run): Rename to ...